# gideon-summer

./: .gitignore  CMakeLists.txt  Chained.h  HashTable.h  Makefile  Open.h  README.md  REPORT.txt  StdMap.h  StdUnorderedMap.h  benchmark.cc  chained.cpp  chained.h  filetest.cc  filetest.cpp  in.txt  output.csv  product.h  profile.py  stats.cpp  stats.h  stdmap.cpp  stdmap.h  template.csv  test.cc  testing.cc  testoutput.csv
Results/: Hashmap Charts Public.xlsx  link.txt
db/: Makefile  UserTable.h  amazoff.db  test.cc
hashing/: CMakeLists.txt  Chained.h  Makefile  Open.h  Product.h  StdMap.h  StdUnorderedMap.h  benchmark.cc  benchmarkClean.cc  stats.h  test.cc  testing.cc
hashing/Profiling/: profile.py  templateLarge.csv
reports/: db  linux  profiling
